# DockerCmake

./: .gitignore  .linuxHandling.c.swp  CMakeLists.txt  Dockerfile  Makefile  README.md  linuxHandling.h  selectServer.c  selectServer.h
linux/: Makefile  linuxHandling.c
src/: selectServer.c  selectServer.h
windows/: windowsHandling.h
